<resources>
    <string name="app_name">filmer</string>
    <string name="sourse_https_www_movieposters_com">sourse: https://www.movieposters.com/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>

    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="light_theme_rb_text">Light</string>
    <string name="night_theme_rb_text">Dark</string>
    <string name="app_theme_group_text">Тема приложения</string>
    <string name="alarm_rv_delete_button_text">delete</string>
    <string name="alarm_rv_item_deletebutton_contentdesc">Delete Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>